--- a/style.css
+++ b/style.css
@@ -1,23 +1,31 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
-.body{
+
+.body {
     font-family: Tahoma sans-serif;
     color: #202020;
 }
-.header{
+
+.header {
     background-color: #f1f1f1;
     padding: 22px 0;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
 }
-.header-container{
+
+.header-container {
     max-width: 1140px;
     margin: auto;
     display: flex;
     justify-content: space-between;
 }
-.nav-link{
+
+.nav-link {
     /* Style for "Подписка" */
     width: 61px;
     height: 12px;
@@ -37,138 +45,168 @@
     line-height: normal;
     text-decoration: none;
 }
-.logo{
+
+.logo {
     /* Style for "Книжный" */
-width: 80px;
-height: 14px;
-color: #202020;
-font-family: Tahoma;
-font-size: 14px;
-font-weight: 700;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-text-align: left;
-text-transform: uppercase;
-/* Text style for "Книжный" */
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
+    width: 80px;
+    height: 14px;
+    color: #202020;
+    font-family: Tahoma;
+    font-size: 14px;
+    font-weight: 700;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    text-transform: uppercase;
+    /* Text style for "Книжный" */
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
 }
-.login{
+
+.login {
     /* Style for "Личный каб" */
-width: 107px;
-height: 12px;
-color: #202020;
-font-family: Tahoma;
-font-size: 14px;
-font-weight: 400;
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-text-align: left;
-/* Text style for "Личный каб" */
-font-style: normal;
-letter-spacing: normal;
-line-height: normal;
-text-decoration: none;
+    width: 107px;
+    height: 12px;
+    color: #202020;
+    font-family: Tahoma;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    /* Text style for "Личный каб" */
+    font-style: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-decoration: none;
 }
-.hero{
-    padding-top: 60px;
+
+.hero {
+    padding-top: 120px;
     padding-bottom: 71px;
 }
-.hero-conteiner{
+
+.hero-conteiner {
     max-width: 1140px;
     margin: auto;
     display: flex;
     align-items: center;
     font-family: sans-serif;
 }
-.hero-img{
+
+.hero-img {
     margin-right: 122px;
+    position: relative;
 }
-.autor{
+
+.sale {
+    position: absolute;
+    right: 0;
+    top: 23px;
+    background-color: tomato;
+    color: #ffffff;
+    padding: 12px 17px;
+
+}
+
+.autor {
     display: block;
     font-size: 24px;
     font-weight: 400;
     margin-bottom: 22px;
 }
-.about-title{
+
+.title {
     font-size: 54px;
     font-weight: 700;
     margin-bottom: 15px;
     margin-top: 0;
 }
-.subtitle{
+
+.subtitle {
     display: block;
     font-size: 24px;
     font-weight: 400;
     line-height: 29px;
     margin-bottom: 48px;
 }
-.info{
+
+.info {
     max-width: 500px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 49px;
 }
-.info-text{
+
+.info-text {
     font-size: 16px;
     font-weight: 400;
     flex-basis: 50%;
     margin-bottom: 16px;
 }
-.prisetag{
+
+.prisetag {
     font-weight: 400;
     font-size: 55px;
     margin-right: 64px;
 }
-.fovorites{
+
+.fovorites {
     font-size: 16px;
     font-weight: 400;
     text-decoration: none;
     color: inherit;
     padding-left: 70px;
 }
-.button{
+
+.button {
     font-size: 16px;
     font-weight: 700;
     padding: 22px 50px;
     border-radius: 5px;
     border: 2px solid #f89c02;
 }
-.button-primary{
+
+.button-primary {
     background-color: #f89c02;
     color: #ffff;
     border: none;
     margin-top: 48px;
     margin-right: 20px;
 }
-.button-outline{
+
+.button-outline {
     border: 2px solid #f89c02;
     color: #f89c02;
     text-decoration: none;
 }
-.about{
+
+.about {
     background-color: #f1f1f1;
     padding: 99px 0px;
 }
-.about-container{
+
+.about-container {
     max-width: 1140px;
     margin: auto;
     display: flex;
     justify-content: space-between;
     font-family: sans-serif;
 }
-.about-book{
+
+.about-book {
     max-width: 454px;
     max-height: 208px;
     flex-shrink: 0;
     display: flex;
     flex-wrap: wrap;
 }
-.about-autor{
+
+.about-autor {
     display: flex;
     flex-wrap: wrap;
     max-width: 552px;
@@ -179,19 +217,77 @@ text-decoration: none;
     padding: 68px 53px;
     align-items: center;
 }
-.autor-text{
+
+.autor-text {
     flex-basis: 100%;
     margin-top: 24px;
     width: 381px;
     height: 64px;
 }
-.autor-link{
+
+.autor-link {
     text-decoration: none;
     color: #202020;
 }
-.autor{
+
+.autor {
     margin-right: 21px;
 }
-.autor-name{
+
+.autor-name {
     margin-bottom: 14px;
+}
+
+.footer {
+    background-color: #f1f1f1;
+    padding-top: 60px;
+    padding-bottom: 93px;
+}
+
+.footer-container {
+    max-width: 1140px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: sans-serif;
+}
+
+.footer-list {
+    padding: 0;
+    list-style: none;
+}
+
+.list-item {
+    margin-bottom: 16px;
+}
+
+.footer-title {
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 32px;
+}
+
+.footer-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.requsites {
+    margin-right: 168px;
+}
+
+.information {
+    margin-right: 158px;
+}
+
+.to-top {
+    position: fixed;
+    bottom: 50px;
+    right: 70px;
+    box-shadow: 0 1px 120px rgba(161, 161, 161, 0.08);
+    border-radius: 4px;
+    border: 1px solid #eeeeee;
+    background-color: #ffffff;
+    padding: 18px;
 }
